# foreman

./: .changelog-config.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.json  DESIGN.md  Dockerfile  LICENSE  PRODUCT.md  README.md  config.example.yaml  conftest.py  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: bump-version.yaml  publish-docs-preview.yaml  publish-docs.yaml  release-container.yaml  test.yaml
.memsearch/memory/: 2026-04-26.md
.superset/: config.json
agents/issue-triage/: Dockerfile  agent.py  pyproject.toml
agents/issue-triage/issue_triage/: __init__.py  agent.py
agents/issue-triage/issue_triage/prompts/: __init__.py  triage.py
agents/issue-triage/prompts/: triage.py
design-system/: colors_and_type.css  content.css  header.css  reset.css
docs/: development.md  explanation.md  index.md  installation.md  quickstart.md
docs/howtos/: index.md  write-an-agent.md
docs/reference/: agent-protocol.md  cli.md  configuration.md  index.md
docs/specs/: index.md
docs/tutorials/: index.md  installation.md  quickstart.md
foreman/: __init__.py  __main__.py  config.py  containers.py  credentials.py  executor.py  logging_info.py  main.py  memory.py  middleware.py  otel.py  poller.py  protocol.py  queue.py  router.py  server.py  settings.py
foreman-client/: pyproject.toml
foreman-client/foremanclient/: __init__.py  client.py  models.py
foreman-client/tests/: test_client.py
foreman/llm/: __init__.py  anthropic.py  base.py  ollama.py
foreman/routers/: __init__.py  agent.py  health.py  queue.py  result.py
night-brownie-client/: pyproject.toml
night-brownie-client/night_brownie_client/: client.py  models.py
night-brownie-client/tests/: test_client.py
night_brownie/: __main__.py  config.py  containers.py  credentials.py  executor.py  logging_info.py  memory.py  middleware.py  otel.py  poller.py  protocol.py  queue.py  server.py  settings.py
night_brownie/llm/: anthropic.py  base.py  ollama.py
night_brownie/routers/: __init__.py  agent.py  health.py  queue.py  result.py
overrides/: base.html  home.html
overrides/partials/: actions.html  alternate.html  comments.html  consent.html  content.html  copyright.html  feedback.html  footer.html  header.html  nav-item-new.html  nav-new.html  palette.html  path-item.html  path.html  progress.html  search.html  social.html  source-file.html  source.html  tabs-item.html  tabs.html  tags.html  toc-item-new.html  toc-new.html  top.html
pr-preview/pr-10/: search.json
pr-preview/pr-12/: 404.html  sitemap.xml
pr-preview/pr-14/: 404.html  index.html  search.json  sitemap.xml
pr-preview/pr-15/: 404.html  index.html  objects.inv  search.json  sitemap.xml
pr-preview/pr-16/: 404.html  index.html  search.json  sitemap.xml
pr-preview/pr-17/: 404.html  index.html  search.json  sitemap.xml
pr-preview/pr-18/: 404.html  index.html
pr-preview/pr-19/: 404.html  search.json
pr-preview/pr-20/: 404.html  index.html  search.json  sitemap.xml
pr-preview/pr-21/: 404.html  index.html  search.json  sitemap.xml
pr-preview/pr-22/: index.html  objects.inv  search.json
pr-preview/pr-23/: 404.html  index.html  search.json  sitemap.xml
pr-preview/pr-24/: 404.html  index.html  objects.inv  search.json
pr-preview/pr-25/: 404.html  (+2 more)
tests/: __init__.py  test_agent_server.py  test_config.py  test_containers.py  test_credentials.py  test_executor.py  test_integration.py  test_llm_backends.py  test_llm_base.py  test_logging_info.py  test_main.py  test_memory.py  test_middleware.py  test_otel.py  test_poller.py  test_protocol.py  test_queue.py  test_queue_router.py  test_result_router.py  test_router.py  test_server.py  test_triage_logic.py
tools/: create-release.sh  gen_doc_stubs.py
(+410 files in other folders)
