[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foreman-issue-triage"
version = "0.1.0"
description = "Issue triage agent for the Foreman AI harness"
requires-python = ">=3.12"

[project.optional-dependencies]
runtime = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "litellm>=1.0.0",
    "httpx>=0.28.0",
]
